Issue #57: change gray button in dark mode

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10697,6 +10697,16 @@ readers do not read off random characters that represent icons */
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-mintpad-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 111 119 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-mintpad-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 68 76 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -10705,6 +10715,11 @@ readers do not read off random characters that represent icons */
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-mintpad-200 {
+  --tw-text-opacity: 1;
+  color: rgb(225 229 232 / var(--tw-text-opacity));
 }
 
 .dark .dark\:hover\:text-white:hover {
